# MessengerOnFileForLinux

./: .gitignore  .gitlab-ci.yml  External_GTest.cmake  README.md  testcommitreview.txt
MessangerOnFileForLinux/: CMakeLists.txt  main.cpp
MessengerOnFileForLinux/: .gitignore  CMakeLists.txt  Logger_default.txt  clear_enviroment.sh  create_enviroment.sh  run_messenger.sh  start_test.sh
MessengerOnFileForLinux/Chat/src/: ChatRequest.cpp  ChatRequest.hpp
MessengerOnFileForLinux/Chat/test/: CMakeLists.txt
MessengerOnFileForLinux/ChatControl/src/: CMakeLists.txt  ChatControl.cpp  ChatControl.hpp  ChatData.hpp  Controler.cpp  Controler.hpp  ConversationControl.cpp  ConversationControl.hpp  Display.cpp  Display.hpp  Receiver.cpp  Receiver.hpp  Reciver.cpp  Reciver.hpp  Sender.cpp  Sender.hpp  TerminalControl.cpp  TerminalControl.hpp  UserInactivityDetector.cpp  UserInactivityDetector.hpp
MessengerOnFileForLinux/ChatControl/test/: CMakeLists.txt  UserInactivityDetecotrTest.cpp  UserInactivityDetectorTestCore.hpp
MessengerOnFileForLinux/ChatFile/src/: CMakeLists.txt  ChatControl.cpp  ChatControl.hpp  ChatControler.cpp  ChatControler.hpp  ChatFabric.cpp  ChatFabric.hpp  ChatRequest.cpp  ChatRequest.hpp  Sender.cpp  Sender.hpp
MessengerOnFileForLinux/ChatFile/test/: CMakeLists.txt  ChatFabricTest.cpp  ChatRequestTest.cpp  ChatRequestTest.hpp  ChatRequestTestCore.cpp  ChatRequestTestCore.hpp
MessengerOnFileForLinux/ChatRequest/src/: CMakeLists.txt
MessengerOnFileForLinux/ChatStarter/src/: CMakeLists.txt  ChatFabric.cpp  ChatFabric.hpp  ChatRequest.cpp  ChatRequest.hpp
MessengerOnFileForLinux/ChatStarter/test/: CMakeLists.txt  ChatFabricTest.cpp  ChatRequestTest.cpp  ChatRequestTestCore.cpp  ChatRequestTestCore.hpp
MessengerOnFileForLinux/Common/src/: CMakeLists.txt  DateManagment.cpp  DateManagment.hpp  GlobalVariables.hpp  SHA1.cpp  SignalHandler.cpp  SignalHandler.hpp  SignalHandling.cpp  SignalHandling.hpp  TimeManagment.cpp  TimeManagment.hpp
MessengerOnFileForLinux/Common/test/: CMakeLists.txt  TimeManagmentTest.cpp
MessengerOnFileForLinux/ConversationStarter/src/: co_tu_ma_byc.txt
MessengerOnFileForLinux/DisplayChat/src/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  InformationPrinter.cpp  InformationPrinter.hpp  InformationPrinterStub.hpp  NcursesPrintOperationWrapper.hpp  NcursesPrintToMainWindowOperationWrapper.cpp  NcursesPrintToMainWindowOperationWrapper.hpp  UserServiceInformationPrinter.cpp  UserServiceInformationPrinter.hpp
MessengerOnFileForLinux/DisplayChat/test/: NcursesPrintOperationWrapperMock.hpp
MessengerOnFileForLinux/FileHandling/: CMakeLists.txt
MessengerOnFileForLinux/FileHandling/src/: CMakeLists.txt  FileGuardian.cpp  FileGuardian.hpp  FileHandling.cpp  FileHandling.hpp  GlobalVariables.hpp  SHA1.cpp  SHA1.hpp  my.diff  my.patch
MessengerOnFileForLinux/FileHandling/test/: CMakeLists.txt  FileHandlingTest.cpp
MessengerOnFileForLinux/LoggerFramework/src/: CMakeLists.txt  ClasslessLogger.cpp  ClasslessLogger.hpp  LogSpace.hpp  Logger.cpp  Logger.hpp
MessengerOnFileForLinux/LoggerFramework/test/: CMakeLists.txt  LoggerTest.cpp
MessengerOnFileForLinux/MessageFramework/src/: CMakeLists.txt  Message.cpp  Message.hpp  PurgeMessage.cpp  PurgeMessage.hpp  StringSum.cpp  StringSum.hpp
MessengerOnFileForLinux/MessageFramework/test/: CMakeLists.txt  MessageTest.cpp  MessageTestCore.cpp  MessageTestCore.hpp  PurgeMessageTest.cpp  PurgeMessageTestCore.cpp  PurgeMessageTestCore.hpp  StringSumTest.cpp
MessengerOnFileForLinux/TerminalFunctionality/src/: CMakeLists.txt  EndConversation.cpp  EndConversation.hpp  HistoryDowloander.cpp  HistoryDowloander.hpp  InviteReceiver.cpp  InviteReceiver.hpp  InviteSender.cpp  InviteSender.hpp  LoggingOut.cpp  LoggingOut.hpp  TerminalCommand.cpp  TerminalCommand.hpp  TerminalFunctionality.cpp  TerminalFunctionality.hpp  UserCommand.hpp
MessengerOnFileForLinux/TerminalFunctionality/test/: CMakeLists.txt  TerminalFunctionalityTest.cpp  TerminalFunctionalityTestCore.cpp  TerminalFunctionalityTestCore.hpp
MessengerOnFileForLinux/UserService/src/: CMakeLists.txt  LocalUser.cpp  LocalUser.hpp  RegisterUser.cpp  RegisterUser.hpp  SignIn.cpp  SignIn.hpp  SignOut.cpp  SignOut.hpp  User.cpp  User.hpp  my.diff
MessengerOnFileForLinux/UserService/test/: CMakeLists.txt  LocalUserTest.cpp  RegisterUserTest.cpp  RegisterUserTestCore.hpp  SignInTest.cpp  SignInTestCore.cpp  SignInTestCore.hpp  SignOutTest.cpp  SignOutTestCore.hpp  UserTest.cpp
MessengerOnFileForLinux/documentation/: documentation.html  doxygenConfigurationFile.txt  doxygenMainPage.txt
MessengerOnFileForLinux/main/src/: CMakeLists.txt  main.cpp
MessengerOnFileForLinux/main/test/: CMakeLists.txt  test.cpp
MessengerOnFileForLinux/scripts/: check_cland-tidy_job_status.sh  check_clang-tidy_job_status.sh  check_valgrind_job_status.sh  clear_enviroment.sh  create_enviroment.sh  gcc_ci.sh  generate_ut_coverage_raport.sh  run-clang-tidy.py  run_messenger.sh  setup_ci.sh
MessengerOnFileForLinux/scripts/ci_scripts/: compile_messenger_ci.sh  generate_ut_coverage_raport_ci.sh  setup_ci_environment.sh
MessengerOnFileForLinux/scripts/local_scripts/: build_msg  clear_enviroment.sh  run_messenger.sh
MessengerOnFileForLinux/user_service/src/: LocalUser.cpp  LocalUser.hpp  RegisterUser.cpp  RegisterUser.hpp  SignIn.cpp  SignIn.hpp  SignOut.cpp  SignOut.hpp  User.cpp  User.hpp
